reviews.html: fixed reviewer comments getting too close to the edge of the  box.

--- a/styles/reviews.css
+++ b/styles/reviews.css
@@ -127,6 +127,7 @@
 #reviewer-comment {
     grid-area: reviewer-comment;
     margin-left: 15px;
+    margin-right: 15px;
 }
 
 .button-container {
